<resources>
    <string name="app_name">Muzix</string>
    <string name="facebook_app_id">6220419531356848</string>
    <string name="fb_login_protocol_scheme">fb6220419531356848</string>
    <string name="facebook_client_token">56789</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_song_playing">SongPlayingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="playlist_playing">Đang phát từ danh sách phát</string>
    <string name="maybe_you_like">Có thể bạn sẽ thích</string>
    <string name="edt_hint">Bạn muốn nghe gì?</string>
    <string name="search">Tìm kiếm</string>
    <string name="next_song">Bài hát tiếp theo</string>
    <string name="playlist">Danh sách phát</string>
    <string name="song">Bài hát</string>
    <string name="artist">Nghệ sĩ</string>
    <string name="follow">Theo dõi</string>
    <string name="show_more">Xem thêm</string>
    <string name="show_less">Rút gọn</string>
    <string name="tracks">Danh sách bài hát</string>
    <string name="random_artist">Các nghệ sĩ được yêu thích</string>
    <string name="list_playlist">Danh sách playlist</string>
    <string name="morning">Chào buổi sáng</string>
    <string name="noon">Chào buổi trưa</string>
    <string name="afternoon">Chào buổi chiều</string>
    <string name="evening">Chào buổi tối</string>
    <string name="library">Thư viện</string>
    <string name="create_playlist">Tạo playlist mới</string>
    <string name="suggest_song">Gợi ý bài hát cho bạn</string>
    <string name="edit_playlist">Chỉnh sửa danh sách phát</string>
    <string name="delete_playlist">Xóa danh sách phát</string>
    <string name="share">Chia sẻ</string>
    <string name="premium">Premium</string>
    <string name="no_ads">Nghe nhạc không quảng cáo</string>
    <string name="save">Lưu</string>
    <string name="submit_delete">Bạn có chắc muốn xóa playlist này không?</string>
    <string name="cancel">Hủy</string>
    <string name="yes">Có</string>
    <string name="free_trial">Dùng thử miễn phí</string>
    <string name="free_1_month">Dùng thử Premium miễn phí trong 1 tháng</string>
    <string name="des">Sau đó chỉ 59,000đ/tháng. Ưu đãi chỉ dành cho những người mới dùng gói Premium. Có áp dụng điều khoản</string>
    <string name="price_1">19.000đ/tháng</string>
    <string name="content_1">Trải nghiệm nghe nhạc với chất lượng cao nhất và không quảng cáo với giá ưu đãi dành riêng cho học sinh, sinh viên</string>
    <string name="tv_no_ads">Nghe nhạc không quảng cáo</string>
    <string name="vip_music">Nghe và tải nhạc Lossless</string>
    <string name="download">Tải nhạc không giới hạn</string>
    <string name="price_2">49.000đ/tháng</string>
    <string name="content_2">Trải nghiệm nghe nhạc với chất lượng cao nhất và không quảng cáo</string>
    <string name="setting">Cài đặt</string>
    <string name="default_notification_channel_id">channel_play</string>
    <string name="new_playlist">Bản phát hành mới</string>
    <string name="noti_">Nội dung phát hành mới nhất từ các nghệ sĩ, podcast và chương trình bạn theo dõi</string>
    <string name="muzix_notification">Thông báo của Muzix</string>
    <string name="email">Email của bạn là gì?</string>
    <string name="next">Tiếp</string>
    <string name="password">Tạo một mật khẩu !</string>
    <string name="when_click_create_account">Bằng việc nhấp vào \'Tạo tài khoản\', bạn đồng ý với điều khoản của Muzix</string>
    <string name="terms">Điều khoản sử dụng</string>
    <string name="privacy">Để tìm hiểu thêm về cách thức Muzix thu thập, sử dụng, chia sẻ và bảo vệ dữ liệu cá nhân của bạn, vui lòng xem Chính sách quyền riêng tư của Spotify</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="your_name">Tên của bạn là gì?</string>
</resources>