<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#333333"
    android:padding="16dp">
    <TextView
        android:id="@+id/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:text="@string/submit_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:backgroundTint="@color/grey"
        android:textColor="@color/main_background"
        android:textAllCaps="false"
        android:text="@string/cancel"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toStartOf="@id/btnSubmit"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        android:text="@string/yes"
        android:textAllCaps="false"
        android:backgroundTint="@color/main"
        android:textColor="@color/main_background"
        android:id="@+id/btnSubmit"
        app:layout_constraintTop_toTopOf="@id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>