<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".view.premium.PremiumFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="110dp">
        <ImageView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/poster" />

        <TextView
            android:id="@+id/free_trial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/poster"
            android:layout_marginStart="16dp"
            android:text="@string/free_trial"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/free_1month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/free_trial"
            android:layout_marginHorizontal="16dp"
            android:text="@string/free_1_month"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPremium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/free_1month"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:paddingVertical="10dp"
            android:text="Dùng Premium"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnPremium"
            android:layout_marginHorizontal="16dp"
            android:text="@string/des"
            android:textColor="@color/grey"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pre1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/des"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/back_pre_1"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/title_pre1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/rounded_text_view"
                android:paddingHorizontal="8dp"
                android:paddingVertical="2dp"
                android:text="Student"
                android:textColor="@color/main_background"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/title_pre1"
                app:layout_constraintStart_toEndOf="@id/title_pre1"
                app:layout_constraintTop_toTopOf="@id/title_pre1"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/price_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/price_1"
                android:textColor="@color/main_background"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/title_pre1"
                app:layout_constraintTop_toBottomOf="@id/title_pre1" />

            <TextView
                android:id="@+id/content_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_1"
                android:textColor="#2C2C2C"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/price_1" />

            <LinearLayout
                android:id="@+id/imgNoAds1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/imgWave1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content_1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_text_view"
                    android:src="@drawable/icons8_no_ads" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/tv_no_ads"
                    android:textColor="#2C2C2C"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/imgWave1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/imgDown1"
                app:layout_constraintStart_toEndOf="@id/imgNoAds1"
                app:layout_constraintTop_toTopOf="@id/imgNoAds1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_text_view"
                    android:padding="6dp"
                    android:src="@drawable/icons8_sound_wave" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/vip_music"
                    android:textColor="#2C2C2C"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/imgDown1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgWave1"
                app:layout_constraintTop_toTopOf="@id/imgNoAds1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_text_view"
                    android:padding="4dp"
                    android:tint="#3BA83F"
                    android:src="@drawable/baseline_arrow_circle_down_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/download"
                    android:textColor="#2C2C2C"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pre2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pre1"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/back_pre_2"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/title_pre2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#FAA865"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/rounded_text_view2"
                android:paddingHorizontal="8dp"
                android:paddingVertical="2dp"
                android:text="Premium Individual"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/title_pre2"
                app:layout_constraintStart_toEndOf="@id/title_pre2"
                app:layout_constraintTop_toTopOf="@id/title_pre2"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/price_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/price_2"
                android:textColor="@color/main_background"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/title_pre2"
                app:layout_constraintTop_toBottomOf="@id/title_pre2" />

            <TextView
                android:id="@+id/content_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_2"
                android:textColor="#2C2C2C"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/price_2" />

            <LinearLayout
                android:id="@+id/imgNoAds2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/imgWave2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content_2">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_text_view"
                    android:src="@drawable/icons8_no_ads"
                    android:tint="#FAA865" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/tv_no_ads"
                    android:textColor="#2C2C2C"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/imgWave2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/imgDown2"
                app:layout_constraintStart_toEndOf="@id/imgNoAds2"
                app:layout_constraintTop_toTopOf="@id/imgNoAds2">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_text_view"
                    android:padding="6dp"
                    android:src="@drawable/icons8_sound_wave"
                    android:tint="#FAA865" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/vip_music"
                    android:textColor="#2C2C2C"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/imgDown2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgWave2"
                app:layout_constraintTop_toTopOf="@id/imgNoAds2">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_text_view"
                    android:padding="4dp"
                    android:src="@drawable/baseline_arrow_circle_down_24"
                    android:tint="#FAA865" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/download"
                    android:textColor="#2C2C2C"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>