<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main_background"
    android:paddingBottom="20dp">
    <View
        android:layout_width="30dp"
        android:layout_height="4dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@color/grey" />
    <ImageView
        android:id="@+id/imgPlaylist"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_launcher_background"
        android:layout_width="50dp"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/tvNamePlaylist"
        android:layout_marginHorizontal="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@id/imgPlaylist"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:text="Tên Playlist" />

    <TextView
        android:id="@+id/tvOwner"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNamePlaylist"
        android:layout_toEndOf="@id/imgPlaylist"
        android:textColor="@color/grey"
        tools:text="Sở hữu" />
    <View
        android:id="@+id/divider"
        android:background="#393838"
        android:layout_marginTop="16dp"
        android:layout_below="@id/imgPlaylist"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_below="@id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvNoAds"
                android:text="@string/no_ads"
                android:textColor="@color/white"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/baseline_diamond_24"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#616161"
                    android:gravity="center_vertical"
                    android:paddingVertical="2dp"
                    android:paddingHorizontal="4dp">
                    <TextView
                        android:text="@string/premium"
                        android:drawablePadding="2.5dp"
                        android:gravity="center_vertical"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        app:drawableStartCompat="@drawable/spotify_icon" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDownload"
                android:text="@string/no_ads"
                android:textColor="@color/white"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/baseline_downloading_20"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#616161"
                    android:gravity="center_vertical"
                    android:paddingVertical="2dp"
                    android:paddingHorizontal="4dp">
                    <TextView
                        android:text="@string/premium"
                        android:drawablePadding="2.5dp"
                        android:gravity="center_vertical"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        app:drawableStartCompat="@drawable/spotify_icon" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvEdit"
            android:layout_marginTop="16dp"
            android:text="@string/edit_playlist"
            android:textColor="@color/white"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/baseline_edit_24"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDelete"
            android:text="@string/delete_playlist"
            android:textColor="@color/white"
            android:drawablePadding="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/baseline_delete_outline_24"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvShare"
            android:text="@string/share"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/baseline_share_24"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>